--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,10 @@
+@import 'base/normalize';
 @import 'abstract/constants';
+@import 'abstract/mixins';
+@import 'abstract/placeholders';
+@import 'utils/bonce';
 @import 'base/base';
+@import 'base/icons';
 @import 'base/buttons';
 @import 'layouts/wrapper';
 
