--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -1,11 +1,7 @@
 .header {
-    background-color: #555555;
     padding: 10px 0;
     color: $color-text;
-    height: 100vh;
 }
-
-.wrapper__header {}
 
 .header__top,
 .header__region {
@@ -177,3 +173,45 @@
     -webkit-animation: animation 3000ms linear both;
     animation: animation 3000ms linear both;
 }
+
+// intro video
+
+.header {
+    height: 100vh;
+}
+
+.header__intro {
+    z-index: -5;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: rgb(10, 8, 8) url(../../img/IMG_8164.JPG) no-repeat center center;
+    background-size: cover;
+
+    &::before {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        content: "";
+        z-index: 1;
+        background-color: rgba(0, 0, 0, .5);
+    }
+}
+
+.header__intro-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+}
+
+
+.wrapper__header {}
