--- a/style/abstract/_mixins.scss
+++ b/style/abstract/_mixins.scss
@@ -5,3 +5,13 @@
     font-style: $style;
     line-height: $height;
 }
+
+@mixin columns($width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    >* {
+        flex-basis: $width;
+    }
+}
