--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,7 @@
 @import 'abstract/mixins';
 @import 'abstract/placeholders';
 @import 'utils/bonce';
+@import 'utils/scrollbar';
 @import 'base/base';
 @import 'base/icons';
 @import 'abstract/columns';
