--- a/style/abstract/_mixins.scss
+++ b/style/abstract/_mixins.scss
@@ -15,3 +15,9 @@
         flex-basis: $width;
     }
 }
+
+@mixin appearancEffect ($transition1: 0.8s, $transition2: 0s, $opacity: 0, $translate1: 0px, $translate2: 120%) {
+    transform: translate($translate1, $translate2);
+    transition: all $transition1 ease $transition2;
+    opacity: $opacity;
+}
