--- a/style/base/_icons.scss
+++ b/style/base/_icons.scss
@@ -7,6 +7,20 @@
         width: 15px;
         height: 16px;
     }
+
+    &_mail {
+        background-image: url("../../img/icons/mail.svg");
+        width: 26px;
+        height: 26px;
+        margin-right: 8px;
+    }
+
+    &_phone {
+        background-image: url("../../img/icons/phone.svg");
+        width: 26px;
+        height: 26px;
+        margin-right: 8px;
+    }
 }
 
 .logo_instagram img {
