--- a/style/components/_aboutUs.scss
+++ b/style/components/_aboutUs.scss
@@ -14,6 +14,7 @@
     flex-direction: column;
     position: relative;
 
+
     a,
     h3,
     span {
@@ -76,9 +77,19 @@
 .about-us__work {
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../../img/about_us_people.JPG');
     background-size: cover;
+    @include appearancEffect($translate1: -20%, $translate2: 0);
+
+    &._active {
+        @include appearancEffect($translate2: 0px, $opacity: 1, $transition2: 0.1s);
+    }
 }
 
 .about-us__instagram {
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../../img/about_us_instagram.JPG') bottom;
     background-size: cover;
+    @include appearancEffect($translate1: 20%, $translate2: 0);
+
+    &._active {
+        @include appearancEffect($translate2: 0px, $opacity: 1, $transition2: 0.1s);
+    }
 }
