--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -148,6 +148,12 @@
     @include font(1.4rem, 2.4rem);
     letter-spacing: .15rem;
     margin-bottom: 40px;
+
+    @include appearancEffect();
+
+    &._active {
+        @include appearancEffect($translate2: 0px, $opacity: 1, $transition2: 0.5s);
+    }
 }
 
 .promo__title-span {
@@ -157,12 +163,22 @@
     width: 763px;
     height: 117px;
     margin-bottom: 10px;
+    @include appearancEffect();
+
+    &._active {
+        @include appearancEffect($translate2: 0px, $opacity: 1);
+    }
 }
 
 .promo__title-description {
     text-transform: uppercase;
     @include font(2.5rem, $weight: 500);
     letter-spacing: .15rem;
+    @include appearancEffect($translate1: -20%, $translate2: 0);
+
+    &._active {
+        @include appearancEffect($translate2: 0px, $opacity: 1, $transition2: 0.5s);
+    }
 }
 
 .gif {
