--- a/style/components/_menu.scss
+++ b/style/components/_menu.scss
@@ -25,8 +25,15 @@
     height: 200px;
     background-size: cover;
     border-radius: 5px;
-    @extend %transition;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.15), 0 10px 10px rgba(0, 0, 0, 0.12);
+    transform: scale(0);
+    transition: all 0.8s ease;
+    opacity: 0;
+
+    &._active {
+        transform: scale(1);
+        opacity: 1;
+    }
 
     &:hover {
         transform: scale(1.02);
