--- a/style/style.css
+++ b/style/style.css
@@ -544,6 +544,10 @@ body {
   font-family: "Circe Rounded", Verdana, sans-serif;
 }
 
+body.lock {
+  overflow: hidden;
+}
+
 .visuallyhidden {
   position: absolute;
   clip: rect(1px, 1px, 1px, 1px);
@@ -1161,6 +1165,84 @@ h3 {
   font-weight: normal;
   font-style: normal;
   line-height: 2.4rem;
+}
+
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transition: all 0.8s ease 0s;
+}
+
+.popup.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup.open .popup__content {
+  transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+  opacity: 1;
+}
+
+.popup__area {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.popup__body {
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 10px;
+}
+
+.popup__content {
+  text-align: center;
+  background-color: #fff;
+  color: #000;
+  max-width: 800px;
+  padding: 30px;
+  position: relative;
+  transition: all 0.8s ease 0s;
+  opacity: 0;
+  transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+}
+
+.popup__close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 2rem;
+  color: #000;
+  text-decoration: none;
+}
+
+.popup__title {
+  font-size: 4rem;
+  margin-bottom: 1em;
+}
+
+.popup__form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 10px;
+  flex-direction: column;
+}
+.popup__form > * {
+  width: 100%;
+  margin: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
