--- a/style/style.css
+++ b/style/style.css
@@ -1233,16 +1233,40 @@ h3 {
   margin-bottom: 1em;
 }
 
-.popup__form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 30px 10px;
-  flex-direction: column;
+.form-inner {
+  padding: 30px;
 }
-.popup__form > * {
+
+.form-inner input,
+.form-inner textarea {
+  display: block;
   width: 100%;
-  margin: 10px;
+  padding: 0 20px;
+  margin-bottom: 20px;
+  background: #E9EFF6;
+  line-height: 40px;
+  border-width: 0;
+  border-radius: 20px;
+  font-family: "Roboto", sans-serif;
+}
+
+.form-inner input[type=submit] {
+  margin-top: 30px;
+  background: #fecc16;
+  border-bottom: 4px solid #dfb213;
+  color: white;
+  font-size: 14px;
+}
+
+.form-inner textarea {
+  resize: none;
+}
+
+:active,
+:hover,
+:focus {
+  outline: 0;
+  outline-offset: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
