--- a/style/components/_form.scss
+++ b/style/components/_form.scss
@@ -21,6 +21,11 @@
     border-bottom: 4px solid #dfb213;
     color: white;
     font-size: 14px;
+    cursor: pointer;
+
+    &:hover {
+        background: #fccd24;
+    }
 }
 
 .form-inner textarea {
