--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -3,6 +3,10 @@
     color: $color-text;
 }
 
+.menu-page-header {
+    background-color: $color-brand-second;
+}
+
 .header__top,
 .header__region {
     display: flex;
@@ -10,12 +14,25 @@
     justify-content: space-around;
 }
 
-.navigatin {
+.menu-page__navigatin {
+    margin: 0;
+}
+
+.menu-page-header__wrapper {
+    display: flex;
+
+    align-items: center;
+    justify-content: space-around;
+}
+
+.navigatin,
+.menu-page__navigatin {
     display: flex;
 }
 
 .navigatin__link,
-.header__language {
+.header__language,
+.menu-page__link {
     list-style-type: none;
     padding: 0 20px;
 
@@ -26,14 +43,13 @@
         position: relative;
         line-height: 1;
         text-decoration: none;
-        letter-spacing: .2rem;
+        letter-spacing: 0.2rem;
         @include font(1.4rem);
         line-height: 2rem;
 
         &:hover {
             color: $color-brand-accent;
         }
-
     }
 
     .header__language_active {
@@ -84,7 +100,6 @@
 }
 
 .dropdown-content {
-
     @extend %transition;
     text-align: center;
     position: absolute;
@@ -120,9 +135,7 @@
     text-transform: uppercase;
     @include font(1.1rem, 2.4rem);
     margin-left: 5px;
-    letter-spacing: .1rem;
-
-
+    letter-spacing: 0.1rem;
 }
 
 .region__now {
@@ -147,7 +160,7 @@
 
 .promo__title-year {
     @include font(1.4rem, 2.4rem);
-    letter-spacing: .15rem;
+    letter-spacing: 0.15rem;
     margin-bottom: 40px;
 
     @include appearancEffect();
@@ -174,7 +187,7 @@
 .promo__title-description {
     text-transform: uppercase;
     @include font(2.5rem, $weight: 500);
-    letter-spacing: .15rem;
+    letter-spacing: 0.15rem;
     @include appearancEffect($translate1: -20%, $translate2: 0);
 
     &._active {
@@ -216,7 +229,7 @@
         height: 100%;
         content: "";
         z-index: 1;
-        background-color: rgba(0, 0, 0, .5);
+        background-color: rgba(0, 0, 0, 0.5);
     }
 }
 
@@ -229,6 +242,3 @@
     object-fit: cover;
     transform: translate(-50%, -50%);
 }
-
-
-.wrapper__header {}
