--- a/style/style.scss
+++ b/style/style.scss
@@ -5,6 +5,7 @@
 @import 'utils/bonce';
 @import 'utils/scrollbar';
 @import 'base/base';
+@import 'base/social';
 @import 'base/icons';
 @import 'abstract/columns';
 @import 'base/buttons';
