--- a/style/components/_map.scss
+++ b/style/components/_map.scss
@@ -1,16 +1,65 @@
 .map {
     background-color: $color-brand-accent;
-    padding: 80px 0;
+    padding: 70px 0 100px;
     background-image: url(../../img/bg_line-uzor_2.png), url(../../img/bg_line-uzor_black.png);
     background-size: 120% 60px;
     background-repeat: no-repeat;
     background-position: top, bottom;
 }
-
+.feedback__layout {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 20px;
+    grid-template-rows: 1fr;
+}
+.contacts__item {
+    display: grid;
+    grid-template-columns: 1fr 20px;
+    grid-template-rows: 1fr;
+}
 .map__wrapper {
     text-align: center;
 }
-
 .map__yandex {
-    margin: 80px 0;
+    width: 100%;
+    height: 500px;
+    @include appearancEffect($translate1: 20%, $translate2: 0);
+    &._active {
+        @include appearancEffect($translate2: 0px, $opacity: 1, $transition2: 0.1s);
+
+        &:hover {
+            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.3), 0 10px 10px rgba(0, 0, 0, 0.3);
+        }
+    }
+}
+.contacts__item {
+    text-align: right;
+    color: $color-brand-second;
+    padding-bottom: 30px;
+    a {
+        @include font(1.8rem);
+        text-decoration: none;
+        letter-spacing: 0.2rem;
+        color: $color-brand-second;
+    }
+    h4 {
+        padding-bottom: 3px;
+    }
+    span {
+        margin-left: 5px;
+    }
+    p {
+        padding-bottom: 8px;
+    }
+}
+
+.map__social-links {
+    *,
+    ::before,
+    ::after {
+        box-sizing: content-box;
+    }
+    h4 {
+        margin-bottom: 10px;
+    }
 }
